sandc/test/fixtures/astRegression/shouldSucceed/productions/mtrPseudex/ArrayMapPseudex.sand
pub class ArrayMapPseudex {
    foo() {
        let a = [n * n for n in arr];
        let a = [if cond { x(); x } else { x } for n in arr];
        let a = [f(i, v) for @i, v in arr];
        let grid = [f(r, c, v) for @r, @c, v in arr];
    }
}