sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/IfBlockStatement.sand
pub class IfBlockStatement {
    foo() {
        let a = if let b = c {
            foo();
        } else if cond {
            c
        } else {
            c
        };
    }
}